<resources>
    <string name="app_name">개드립</string>
    <string name="action_settings">Settings</string>

    <string name="alert">알림</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="config_data_check">데이터 정보를 확인 중 입니다</string>
    <string name="config_data_register">설정 정보를 등록 중 입니다</string>
    <string name="config_data_auto_login">자동 로그인 확인 중 입니다</string>

    <string name="join_email">이메일</string>
    <string name="join_password">비밀번호</string>
    <string name="join_nickname">닉네임</string>
    <string name="join_device">디바이스정보</string>
    <string name="join_btn_join">JOIN</string>
    <string name="join_btn_join_us">JOIN US</string>
    <string name="join_welcome"> 님 환영합니다!</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_device">Device</string>
    <string name="login_btn_login">LOGIN</string>
    <string name="login_btn_facebook_login">FACEBOOK</string>
    <string name="login_btn_kakaotalk_login">KAKAO</string>
    <string name="login_welcome"> 님 로그인!</string>
    <string name="logout">로그아웃</string>
    <string name="login_need">로그인이 필요합니다. 로그인 하시겠습니까?</string>

    <!-- Setting  -->
    <string name="setting_title_push">PUSH</string>
    <string name="setting_check_push">댓글 및 추천 알림 서비스 ON/OFF 설정</string>


    <!-- Drip write-->
    <string name="write_hint">개드립 한번 해보시개ㅋ.</string>
    <string name="write_btn_write">글쓰기</string>
    <string name="write_btn_add_image">사진 추가</string>
    <string name="write_welcome"> 님의 글이 등록 되었습니다!</string>
    <string name="write_notice">한 번 내 뱉은 드립은 주워 담을 수 없다.</string>
    <string name="write_empty_notice">드립을 입력하시게.</string>

    <string name="drip_recommend">추천+%s</string>
    <string name="drip_comment">댓글+%s</string>

    <string name="mypage_user_drip">내가 친 드립 수</string>
    <string name="mypage_user_drip_recommend">추천 받은 수</string>

    <!-- UserInfo -->
    <string name="invalid_user_email">이메일 형식이 잘못 되었습니다.</string>
    <string name="invalid_user_password">패스워드 형식이 잘못 되었습니다.</string>


</resources>
